# keyword-search-app

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
src/components/coach_ai/: .dockerignore  .env.sample  Dockerfile  Dockerfile.local  app.py  docker-compose.yaml  docker-entrypoint.sh  imagedefinitions.json  models.py  settings.py
src/components/coach_ai/alembic/: env.py
src/components/coach_ai/alembic/versions/: 03ebbd95b3ad_change_score_to_float.py  5a9e362043e2_add_user_and_analytics_event.py  67fb365d837b_update_decimal_precision.py  7244b1fec49f_add_rm_tables.py  826d7efa32e9_add_train_tables.py  f855013dd732_add_librarian_tables.py
src/components/coach_ai/helpers/: auth.py  callback.py  chat_history.py  cognitive_search.py  dummy_customers.py  logging.py  messages.py  roles.py  sessions.py  status.py  storage.py  utils.py
src/components/coach_ai/modules/common/chains/: question_generator.py  response_rewriter.py  simulator.py
src/components/coach_ai/modules/common/prompts/: __init__.py  rewrite_response.txt  simulator.txt  (+2 more)
src/components/coach_ai/modules/evaluation/: context_recall.py  llm_judge.py
src/components/coach_ai/modules/librarian/: constants.py
src/components/coach_ai/routes/: librarian.py  speech.py
src/components/coach_ai/schema/librarian/: conversations.py  messages.py  responses.py  rewrites.py
src/components/coach_ai/schema/user/: responses.py
src/components/coach_ai/services/: az_speech.py  az_storage.py  openai.py
src/components/traditional_keyword_search/: app.py
src/helpers/: loaders.py  post_processing.py  search.py  search_algorithms.py
(+15 files in other folders)
